--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "react-export-table-to-excel": "^1.0.6",
         "react-flatpickr": "^3.10.13",
         "react-images-uploading": "^3.1.7",
+        "react-medium-image-zoom": "^5.2.10",
         "react-popper": "^2.3.0",
         "react-quill": "^2.0.0",
         "react-redux": "^8.0.4",
